<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size_10_dp"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="@dimen/size_45_dp"
            android:layout_height="@dimen/size_45_dp"
            android:id="@+id/iv_icon"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_logo"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            >

            <TextView
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:text="@string/app_name_c"
                />
            <TextView
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:id="@+id/tv_app_name"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:text="@string/text_body_c"
                android:layout_weight="25"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:id="@+id/tv_msg_body"
                android:layout_weight="75"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:text="@string/time_c"
                android:layout_weight="25"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:id="@+id/tv_time"
                android:layout_weight="75"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="@dimen/size_35_dp"
                android:layout_weight="1"
                android:background="@color/light_grey"
                android:text="@string/app_info"
                android:drawableLeft="@drawable/ic_info"
                android:layout_margin="@dimen/size_5_dp"
                android:paddingLeft="@dimen/size_5_dp"
                android:id="@+id/bt_info"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.ButtonBar"

                />

            <Button
                android:layout_width="0dp"
                android:layout_height="@dimen/size_35_dp"
                android:layout_weight="1"
                android:background="@color/light_grey"
                android:text="@string/launch_app"
                android:layout_margin="@dimen/size_5_dp"
                android:paddingLeft="@dimen/size_5_dp"
                android:drawableLeft="@drawable/ic_launch"
                android:id="@+id/bt_launch"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.ButtonBar"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="@dimen/size_35_dp"
                android:layout_weight="1"
                android:background="@color/light_grey"
                android:text="@string/delete"
                android:paddingLeft="@dimen/size_5_dp"
                android:drawableLeft="@drawable/ic_delete"
                android:layout_margin="@dimen/size_5_dp"
                android:id="@+id/bt_delete"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.ButtonBar"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>